ic/vendor/libsignal-protocol-sys/bindings.rs

extern "C" {
    pub fn signal_message_get_sender_ratchet_key(
        message: *const signal_message,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn signal_message_get_message_version(
        message: *const signal_message,
    ) -> u8;
}
extern "C" {
    pub fn signal_message_get_counter(message: *const signal_message) -> u32;
}
extern "C" {
    pub fn signal_message_get_body(
        message: *const signal_message,
    ) -> *mut signal_buffer;
}
extern "C" {
    /// Verify the MAC on the Signal message.
    ///
    /// @return 1 if verified, 0 if invalid, negative on error
    pub fn signal_message_verify_mac(
        message: *mut signal_message,
        sender_identity_key: *mut ec_public_key,
        receiver_identity_key: *mut ec_public_key,
        mac_key: *const u8,
        mac_key_len: usize,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_message_is_legacy(
        data: *const u8,
        len: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn signal_message_destroy(type_: *mut signal_type_base);
}
extern "C" {
    pub fn pre_key_signal_message_create(
        pre_key_message: *mut *mut pre_key_signal_message,
        message_version: u8,
        registration_id: u32,
        pre_key_id: *const u32,
        signed_pre_key_id: u32,
        base_key: *mut ec_public_key,
        identity_key: *mut ec_public_key,
        message: *mut signal_message,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pre_key_signal_message_deserialize(
        message: *mut *mut pre_key_signal_message,
        data: *const u8,
        len: usize,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pre_key_signal_message_copy(
        message: *mut *mut pre_key_signal_message,
        other_message: *mut pre_key_signal_message,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pre_key_signal_message_get_message_version(
        message: *const pre_key_signal_message,
    ) -> u8;
}
extern "C" {
    pub fn pre_key_signal_message_get_identity_key(
        message: *const pre_key_signal_message,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn pre_key_signal_message_get_registration_id(
        message: *const pre_key_signal_message,
    ) -> u32;
}
extern "C" {
    pub fn pre_key_signal_message_has_pre_key_id(
        message: *const pre_key_signal_message,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pre_key_signal_message_get_pre_key_id(
        message: *const pre_key_signal_message,
    ) -> u32;
}
extern "C" {
    pub fn pre_key_signal_message_get_signed_pre_key_id(
        message: *const pre_key_signal_message,
    ) -> u32;
}
extern "C" {
    pub fn pre_key_signal_message_get_base_key(
        message: *const pre_key_signal_message,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn pre_key_signal_message_get_signal_message(
        message: *const pre_key_signal_message,
    ) -> *mut signal_message;
}
extern "C" {
    pub fn pre_key_signal_message_destroy(type_: *mut signal_type_base);
}
extern "C" {
    pub fn sender_key_message_create(
        message: *mut *mut sender_key_message,
        key_id: u32,
        iteration: u32,
        ciphertext: *const u8,
        ciphertext_len: usize,
        signature_key: *mut ec_private_key,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sender_key_message_deserialize(
        message: *mut *mut sender_key_message,
        data: *const u8,
        len: usize,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sender_key_message_copy(
        message: *mut *mut sender_key_message,
        other_message: *mut sender_key_message,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sender_key_message_get_key_id(
        message: *mut sender_key_message,
    ) -> u32;
}
extern "C" {
    pub fn sender_key_message_get_iteration(
        message: *mut sender_key_message,
    ) -> u32;
}
extern "C" {
    pub fn sender_key_message_get_ciphertext(
        message: *mut sender_key_message,
    ) -> *mut signal_buffer;
}
extern "C" {
    pub fn sender_key_message_verify_signature(
        message: *mut sender_key_message,
        signature_key: *mut ec_public_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sender_key_message_destroy(type_: *mut signal_type_base);
}
extern "C" {
    pub fn sender_key_distribution_message_create(
        message: *mut *mut sender_key_distribution_message,
        id: u32,
        iteration: u32,
        chain_key: *const u8,
        chain_key_len: usize,
        signature_key: *mut ec_public_key,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sender_key_distribution_message_deserialize(
        message: *mut *mut sender_key_distribution_message,
        data: *const u8,
        len: usize,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sender_key_distribution_message_copy(
        message: *mut *mut sender_key_distribution_message,
        other_message: *mut sender_key_distribution_message,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sender_key_distribution_message_get_id(
        message: *mut sender_key_distribution_message,
    ) -> u32;
}
extern "C" {
    pub fn sender_key_distribution_message_get_iteration(
        message: *mut sender_key_distribution_message,
    ) -> u32;
}
extern "C" {
    pub fn sender_key_distribution_message_get_chain_key(
        message: *mut sender_key_distribution_message,
    ) -> *mut signal_buffer;
}
extern "C" {
    pub fn sender_key_distribution_message_get_signature_key(
        message: *mut sender_key_distribution_message,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn sender_key_distribution_message_destroy(
        type_: *mut signal_type_base,
    );
}
extern "C" {
    pub fn session_state_create(
        state: *mut *mut session_state,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_serialize(
        buffer: *mut *mut signal_buffer,
        state: *mut session_state,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_deserialize(
        state: *mut *mut session_state,
        data: *const u8,
        len: usize,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_copy(
        state: *mut *mut session_state,
        other_state: *mut session_state,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_set_session_version(
        state: *mut session_state,
        version: u32,
    );
}
extern "C" {
    pub fn session_state_get_session_version(
        state: *const session_state,
    ) -> u32;
}
extern "C" {
    pub fn session_state_set_local_identity_key(
        state: *mut session_state,
        identity_key: *mut ec_public_key,
    );
}
extern "C" {
    pub fn session_state_get_local_identity_key(
        state: *const session_state,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn session_state_set_remote_identity_key(
        state: *mut session_state,
        identity_key: *mut ec_public_key,
    );
}
extern "C" {
    pub fn session_state_get_remote_identity_key(
        state: *const session_state,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn session_state_set_root_key(
        state: *mut session_state,
        root_key: *mut ratchet_root_key,
    );
}
extern "C" {
    pub fn session_state_get_root_key(
        state: *const session_state,
    ) -> *mut ratchet_root_key;
}
extern "C" {
    pub fn session_state_set_previous_counter(
        state: *mut session_state,
        counter: u32,
    );
}
extern "C" {
    pub fn session_state_get_previous_counter(
        state: *const session_state,
    ) -> u32;
}
extern "C" {
    pub fn session_state_set_sender_chain(
        state: *mut session_state,
        sender_ratchet_key_pair: *mut ec_key_pair,
        chain_key: *mut ratchet_chain_key,
    );
}
extern "C" {
    pub fn session_state_get_sender_ratchet_key(
        state: *const session_state,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn session_state_get_sender_ratchet_key_pair(
        state: *const session_state,
    ) -> *mut ec_key_pair;
}
extern "C" {
    pub fn session_state_get_sender_chain_key(
        state: *const session_state,
    ) -> *mut ratchet_chain_key;
}
extern "C" {
    pub fn session_state_set_sender_chain_key(
        state: *mut session_state,
        chain_key: *mut ratchet_chain_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_has_sender_chain(
        state: *const session_state,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_has_message_keys(
        state: *mut session_state,
        sender_ephemeral: *mut ec_public_key,
        counter: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_remove_message_keys(
        state: *mut session_state,
        message_keys_result: *mut ratchet_message_keys,
        sender_ephemeral: *mut ec_public_key,
        counter: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_set_message_keys(
        state: *mut session_state,
        sender_ephemeral: *mut ec_public_key,
        message_keys: *mut ratchet_message_keys,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_add_receiver_chain(
        state: *mut session_state,
        sender_ratchet_key: *mut ec_public_key,
        chain_key: *mut ratchet_chain_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_set_receiver_chain_key(
        state: *mut session_state,
        sender_ephemeral: *mut ec_public_key,
        chain_key: *mut ratchet_chain_key,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_get_receiver_chain_key(
        state: *mut session_state,
        sender_ephemeral: *mut ec_public_key,
    ) -> *mut ratchet_chain_key;
}
extern "C" {
    pub fn session_state_set_pending_key_exchange(
        state: *mut session_state,
        sequence: u32,
        our_base_key: *mut ec_key_pair,
        our_ratchet_key: *mut ec_key_pair,
        our_identity_key: *mut ratchet_identity_key_pair,
    );
}
extern "C" {
    pub fn session_state_get_pending_key_exchange_sequence(
        state: *mut session_state,
    ) -> u32;
}
extern "C" {
    pub fn session_state_get_pending_key_exchange_base_key(
        state: *const session_state,
    ) -> *mut ec_key_pair;
}
extern "C" {
    pub fn session_state_get_pending_key_exchange_ratchet_key(
        state: *const session_state,
    ) -> *mut ec_key_pair;
}
extern "C" {
    pub fn session_state_get_pending_key_exchange_identity_key(
        state: *const session_state,
    ) -> *mut ratchet_identity_key_pair;
}
extern "C" {
    pub fn session_state_has_pending_key_exchange(
        state: *const session_state,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_set_unacknowledged_pre_key_message(
        state: *mut session_state,
        pre_key_id: *const u32,
        signed_pre_key_id: u32,
        base_key: *mut ec_public_key,
    );
}
extern "C" {
    pub fn session_state_unacknowledged_pre_key_message_has_pre_key_id(
        state: *const session_state,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_unacknowledged_pre_key_message_get_pre_key_id(
        state: *const session_state,
    ) -> u32;
}
